<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.vlmovies.ui.moviedetails.MovieDetailsViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.moviedetails.MovieDetailsFragment">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12"
                android:layout_marginEnd="@dimen/dimen_12"
                android:text="@string/for_adult"
                android:textColor="@color/color_danger"
                android:textSize="@dimen/font_18"
                android:visibility="@{viewModel.movieDetails.adult ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@id/original_title_TextView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/original_title_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_12"
                android:layout_marginTop="@dimen/dimen_12"
                android:text="@string/original_title"
                android:textColor="@color/black"
                android:textSize="@dimen/font_20"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_6"
                android:layout_marginTop="@dimen/dimen_12"
                android:layout_marginEnd="@dimen/dimen_12"
                android:paddingEnd="@dimen/dimen_18"
                android:paddingStart="@dimen/dimen_1"
                android:text="@{viewModel.movieDetails.original_title}"
                android:textColor="@color/blue"
                android:textSize="@dimen/font_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.00"
                app:layout_constraintStart_toEndOf="@id/original_title_TextView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/original_language_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_12"
                android:layout_marginTop="@dimen/dimen_30"
                android:text="@string/original_language"
                android:textColor="@color/black"
                android:textSize="@dimen/font_18"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/original_title_TextView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_6"
                android:layout_marginTop="@dimen/dimen_30"
                android:text="@{viewModel.movieDetails.original_language}"
                android:textColor="@color/blue"
                android:textSize="@dimen/font_18"
                app:layout_constraintStart_toEndOf="@id/original_language_TextView"
                app:layout_constraintTop_toBottomOf="@id/original_title_TextView" />

            <TextView
                android:id="@+id/release_date_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_12"
                android:layout_marginTop="@dimen/dimen_12"
                android:text="@string/release_date"
                android:textColor="@color/black"
                android:textSize="@dimen/font_18"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/original_language_TextView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_6"
                android:layout_marginTop="@dimen/dimen_12"
                android:text="@{viewModel.movieDetails.release_date}"
                android:textColor="@color/blue"
                android:textSize="@dimen/font_18"
                app:layout_constraintStart_toEndOf="@id/release_date_TextView"
                app:layout_constraintTop_toBottomOf="@id/original_language_TextView" />

            <TextView
                android:id="@+id/overview_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_12"
                android:layout_marginTop="@dimen/dimen_12"
                android:text="@string/overview"
                android:textColor="@color/black"
                android:textSize="@dimen/font_18"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/release_date_TextView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_12"
                android:layout_marginTop="@dimen/dimen_4"
                android:layout_marginEnd="@dimen/dimen_12"
                android:paddingEnd="@dimen/dimen_12"
                android:paddingStart="@dimen/dimen_1"
                android:text="@{viewModel.movieDetails.overview}"
                android:textColor="@color/blue"
                android:textSize="@dimen/font_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.00"
                app:layout_constraintStart_toStartOf="@+id/overview_TextView"
                app:layout_constraintTop_toBottomOf="@+id/overview_TextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/loading_ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{viewModel.isSuccess ? View.GONE : viewModel.failed ? View.GONE : View.VISIBLE }"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/error_message_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen_8"
            android:gravity="center_horizontal"
            android:onClick="@{()-> viewModel.tryGetMovieDetails()}"
            android:text="@string/error_message"
            android:textColor="@color/black"
            android:textSize="@dimen/font_24"
            android:visibility="@{viewModel.failed ? View.VISIBLE : View.GONE}" />
    </FrameLayout>
</layout>